--- a/app/src/main/res/layout/popup_textbox.xml
+++ b/app/src/main/res/layout/popup_textbox.xml
@@ -9,12 +9,13 @@
         android:id="@+id/popup_title_example"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="8dp"
+        android:layout_marginTop="24dp"
         android:text="@string/example"
         android:textSize="20sp"
-        app:layout_constraintBottom_toTopOf="@+id/picker_example"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/popup_edittext_layout_hint"
+        />
 
     <Button
         android:id="@+id/popup_set_button"
@@ -29,44 +30,45 @@
         />
 
     <include
-        android:id="@+id/picker_example"
         layout="@layout/ui_textbox_maker"
+        android:id="@+id/picker_example"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.88"/>
+        app:layout_constraintTop_toBottomOf="@+id/popup_title_example"
+        />
 
     <TextView
         android:id="@+id/title"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
         android:layout_marginEnd="8dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
         android:text="@string/DefaultTitle"
         android:textAlignment="center"
         android:textSize="24sp"
-        app:layout_constraintBottom_toTopOf="@+id/popup_edittext_layout"
         app:layout_constraintEnd_toStartOf="@+id/guideline2"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        />
 
     <!--This layout sets the size/dimensions of the box-->
     <com.google.android.material.textfield.TextInputLayout
         android:id="@+id/popup_edittext_layout"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
         android:layout_marginEnd="8dp"
-        android:layout_marginBottom="16dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
+        app:layout_constraintEnd_toStartOf="@+id/guideline2"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/title"
         app:boxStrokeColor="@color/accent_color"
         app:counterTextColor="@color/accent_color"
         app:hintTextColor="@color/accent_color"
-        app:layout_constraintBottom_toTopOf="@+id/popup_set_button"
-        app:layout_constraintEnd_toStartOf="@+id/guideline2"
-        app:layout_constraintStart_toStartOf="parent">
+        >
 
         <!--This is the actual edit text which takes the input-->
         <com.google.android.material.textfield.TextInputEditText
@@ -80,7 +82,8 @@
             android:textSize="34sp"
             app:layout_constraintBottom_toTopOf="@+id/yes_no_example"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="@+id/filledTextField" />
+            app:layout_constraintStart_toStartOf="@+id/filledTextField"
+            />
     </com.google.android.material.textfield.TextInputLayout>
 
     <!--This layout sets the size/dimensions of the box-->
@@ -88,30 +91,26 @@
         android:id="@+id/hint"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
-        android:layout_marginEnd="8dp"
+        android:layout_marginTop="16dp"
         android:text="@string/HintTextTitle"
         android:textAlignment="center"
         android:textSize="24sp"
-        app:layout_constraintBottom_toTopOf="@+id/popup_edittext_layout_hint"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.45"
-        app:layout_constraintStart_toStartOf="@+id/guideline2"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/popup_help_layout"
+        />
 
     <com.google.android.material.textfield.TextInputLayout
         android:id="@+id/popup_edittext_layout_hint"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginBottom="16dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/hint"
         app:boxStrokeColor="@color/accent_color"
         app:counterTextColor="@color/accent_color"
         app:hintTextColor="@color/accent_color"
-        app:layout_constraintBottom_toTopOf="@+id/popup_set_button"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="@+id/guideline2">
+        >
 
         <!--This is the actual edit text which takes the input-->
         <com.google.android.material.textfield.TextInputEditText
@@ -125,7 +124,8 @@
             android:textSize="34sp"
             app:layout_constraintBottom_toTopOf="@+id/yes_no_example"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="@+id/filledTextField" />
+            app:layout_constraintStart_toStartOf="@+id/filledTextField"
+            />
     </com.google.android.material.textfield.TextInputLayout>
 
     <androidx.constraintlayout.widget.Guideline
@@ -134,6 +134,72 @@
         android:layout_height="wrap_content"
         android:orientation="vertical"
         app:layout_constraintGuide_percent=".5" />
+
+    <Button
+        android:id="@+id/popup_delete_button"
+        android:layout_width="wrap_content"
+        android:layout_height="0dp"
+        android:layout_marginTop="16dp"
+        android:text="@string/delete_cell"
+        android:visibility="gone"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/picker_example"
+        />
+
+    <TextView
+        android:id="@+id/help_text"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="8dp"
+        android:text="@string/enter_the_help_text"
+        android:textAlignment="center"
+        android:textSize="24sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="@+id/guideline2"
+        app:layout_constraintTop_toTopOf="parent"
+        />
+
+    <com.google.android.material.textfield.TextInputLayout
+        android:id="@+id/popup_help_layout"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="8dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="@+id/guideline2"
+        app:layout_constraintTop_toBottomOf="@+id/help_text"
+        app:boxStrokeColor="@color/accent_color"
+        app:counterTextColor="@color/accent_color"
+        app:hintTextColor="@color/accent_color"
+        >
+
+        <!--This is the actual edit text which takes the input-->
+        <com.google.android.material.textfield.TextInputEditText
+            android:id="@+id/popup_help_text"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:imeOptions="actionDone"
+            android:selectAllOnFocus="true"
+            android:singleLine="true"
+            android:textCursorDrawable="@null"
+            android:textSize="34sp"
+            app:layout_constraintBottom_toTopOf="@+id/yes_no_example"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="@+id/filledTextField"
+            />
+    </com.google.android.material.textfield.TextInputLayout>
+
+    <ImageButton
+        android:id="@+id/help_button"
+        android:layout_width="17dp"
+        android:layout_height="17dp"
+        android:layout_marginBottom="16dp"
+        android:background="@drawable/help_icon"
+        app:layout_constraintBottom_toTopOf="@+id/picker_example"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.75"
+        app:layout_constraintStart_toEndOf="@+id/popup_title_example"
+        />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
