--- a/app/src/main/res/layout/popup_teamselect.xml
+++ b/app/src/main/res/layout/popup_teamselect.xml
@@ -1,20 +1,21 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
     >
 
   <Button
       android:id="@+id/popup_delete_button"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
-      android:layout_marginTop="8dp"
+      android:layout_marginTop="16dp"
       android:text="Delete Cell?"
       android:visibility="gone"
       app:layout_constraintEnd_toEndOf="parent"
       app:layout_constraintStart_toStartOf="parent"
-      app:layout_constraintTop_toBottomOf="@+id/match_number"
+      app:layout_constraintTop_toBottomOf="@+id/teamSpinner"
       />
 
   <TextView
@@ -34,23 +35,11 @@
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:layout_marginTop="16dp"
-      android:text="Example"
-      android:textSize="20sp"
-      app:layout_constraintEnd_toEndOf="parent"
-      app:layout_constraintStart_toStartOf="parent"
-      app:layout_constraintTop_toBottomOf="@+id/popup_help_layout"
-      />
-
-  <TextView
-      android:id="@+id/text_example"
-      android:layout_width="wrap_content"
-      android:layout_height="wrap_content"
-      android:layout_marginTop="16dp"
-      android:text="Team             Match"
+      android:text="Select Team"
       android:textSize="24sp"
       app:layout_constraintEnd_toEndOf="parent"
       app:layout_constraintStart_toStartOf="parent"
-      app:layout_constraintTop_toBottomOf="@+id/popup_title_example"
+      app:layout_constraintTop_toBottomOf="@+id/popup_help_layout"
       />
 
   <androidx.constraintlayout.widget.Guideline
@@ -61,42 +50,17 @@
       app:layout_constraintGuide_percent=".5"
       />
 
-  <TextView
-      android:id="@+id/team_number"
-      android:layout_width="wrap_content"
-      android:layout_height="wrap_content"
-      android:text="9999"
-      android:textAlignment="center"
-      android:textSize="20sp"
-      app:layout_constraintEnd_toStartOf="@+id/guideline10"
-      app:layout_constraintHorizontal_bias="0.67"
-      app:layout_constraintStart_toStartOf="parent"
-      app:layout_constraintTop_toBottomOf="@+id/text_example"
-      />
-
-  <TextView
-      android:id="@+id/match_number"
-      android:layout_width="wrap_content"
-      android:layout_height="wrap_content"
-      android:text="0"
-      android:textAlignment="center"
-      android:textSize="20sp"
-      app:layout_constraintEnd_toEndOf="parent"
-      app:layout_constraintHorizontal_bias="0.34"
-      app:layout_constraintStart_toEndOf="@+id/guideline10"
-      app:layout_constraintTop_toBottomOf="@+id/text_example"
-      />
-
   <ImageButton
       android:id="@+id/help_button"
       android:layout_width="17dp"
       android:layout_height="17dp"
-      android:layout_marginBottom="24dp"
       android:background="@drawable/help_icon"
-      app:layout_constraintBottom_toTopOf="@+id/text_example"
+      app:layout_constraintBottom_toTopOf="@+id/teamSpinner"
       app:layout_constraintEnd_toEndOf="parent"
-      app:layout_constraintHorizontal_bias="0.34"
+      app:layout_constraintHorizontal_bias="0.31"
       app:layout_constraintStart_toEndOf="@+id/popup_title_example"
+      app:layout_constraintTop_toBottomOf="@+id/popup_help_layout"
+      app:layout_constraintVertical_bias="0.38"
       />
 
 
@@ -127,5 +91,15 @@
         app:layout_constraintStart_toStartOf="@+id/filledTextField"
         />
   </com.google.android.material.textfield.TextInputLayout>
+
+  <Spinner
+      android:id="@+id/teamSpinner"
+      android:layout_width="wrap_content"
+      android:layout_height="wrap_content"
+      android:layout_marginTop="16dp"
+      app:layout_constraintEnd_toEndOf="parent"
+      app:layout_constraintStart_toStartOf="parent"
+      app:layout_constraintTop_toBottomOf="@+id/popup_title_example"
+      />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
