--- a/app/src/main/res/layout/ui_multi_segmented.xml
+++ b/app/src/main/res/layout/ui_multi_segmented.xml
@@ -34,7 +34,7 @@
             app:autoSizeTextType="uniform"
             app:sb_selectedTextColor="@color/white"
             app:sb_text="@string/one"
-            app:sb_textColor="@color/black"
+            app:sb_textColor="@color/buttongroup_text_color"
             />
 
         <com.addisonelliott.segmentedbutton.SegmentedButton
@@ -46,7 +46,7 @@
             app:autoSizeTextType="uniform"
             app:sb_selectedTextColor="@color/white"
             app:sb_text="@string/two"
-            app:sb_textColor="@color/black"
+            app:sb_textColor="@color/buttongroup_text_color"
             />
 
         <com.addisonelliott.segmentedbutton.SegmentedButton
@@ -59,7 +59,7 @@
             app:autoSizeTextType="uniform"
             app:sb_selectedTextColor="@color/white"
             app:sb_text="@string/three"
-            app:sb_textColor="@color/black"
+            app:sb_textColor="@color/buttongroup_text_color"
             />
 
         <com.addisonelliott.segmentedbutton.SegmentedButton
@@ -72,7 +72,7 @@
             app:autoSizeTextType="uniform"
             app:sb_selectedTextColor="@color/white"
             app:sb_text="@string/four"
-            app:sb_textColor="@color/black"
+            app:sb_textColor="@color/buttongroup_text_color"
             />
 
         <com.addisonelliott.segmentedbutton.SegmentedButton
@@ -85,7 +85,7 @@
             app:autoSizeTextType="uniform"
             app:sb_selectedTextColor="@color/white"
             app:sb_text="@string/five"
-            app:sb_textColor="@color/black"
+            app:sb_textColor="@color/buttongroup_text_color"
             />
 
         <com.addisonelliott.segmentedbutton.SegmentedButton
@@ -98,7 +98,7 @@
             app:autoSizeTextType="uniform"
             app:sb_selectedTextColor="@color/white"
             app:sb_text="@string/six"
-            app:sb_textColor="@color/black"
+            app:sb_textColor="@color/buttongroup_text_color"
             />
     </com.addisonelliott.segmentedbutton.SegmentedButtonGroup>
 
